<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/iVLogoBar"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_logo" />

            <ImageView
                android:id="@+id/iVSettings"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:baselineAlignBottom="false"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_settings"
                tools:ignore="VectorDrawableCompat" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:tabTextColor="@color/colorTextPrimary">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabRecargas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_recargas" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabRecaudacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_recaudacion" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabAdministracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_administracion" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.viewpager.widget.ViewPager>

</LinearLayout>